gke/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - example.com
    secretName: project-id-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /api
            backend:
              serviceName: flask-service
              servicePort: 5000
          - path: /auth
            backend:
              serviceName: flask-service
              servicePort: 5000
          - path: /
            backend:
              serviceName: react-service
              servicePort: 80
